--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: aqua;
+    background: url('fundo.avif');
     font-family: Bai Jamjuree;
 }
 
@@ -48,4 +48,9 @@ display: flex;
     padding: 0.5rem;
     border-radius: 0.6;
     font-size: 1vw;
+
+}
+
+.cartao_conteudo p {
+    color: var(--card-back-color)
 }
