--- a/assets/style.css
+++ b/assets/style.css
@@ -59,3 +59,19 @@ display: flex;
     color: var(--card-back-color);
     font-weight: 700;
 }
+
+.cartao:hover .cartao__conteudo {
+    transform: rotateY(180deg);
+}
+
+.cartao__conteudo__pergunta,
+.cartao__conteudo__resposta {
+    backface-visibility: hidden;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
+
+.cartao__conteudo__resposta {
+    transform: rotateY(180deg);
+}
