--- a/assets/style.css
+++ b/assets/style.css
@@ -4,13 +4,14 @@
     --card-back-color: #00F4BF;
 }
 
-body{
-    background: url('img/fundo.avif');
+
+body {
+    background: url('img/fundo.jpg');
     font-family: Bai Jamjuree;
 }
 
-footer{
-    background-color: azure;
+footer {
+    background-color: black;
     color: white;
     position: fixed;
     bottom: 0;
@@ -25,16 +26,15 @@ footer p {
 }
 
 #container {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-between;
-padding: 4rem;
-gap: 3rem;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
 }
 
 .cartao {
     margin: 1rem 1rem;
-    background-color: blue;
     height: 20rem;
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
@@ -42,40 +42,44 @@ gap: 3rem;
 
 .cartao_conteudo {
     text-align: center;
-    background-color: rgb(206, 130, 130);
+    background-color: var(--card-front-color);
     height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 300ms ease-in-out;
 }
 
 .cartao_conteudo h3 {
-    background-color: blueviolet;
+    color: var(--text-color);
+    border: 1px solid var(--text-color);
     text-align: left;
     padding: 0.5rem;
-    border-radius: 0.6;
+    border-radius: 0.6rem;
     font-size: 1vw;
-
+    backface-visibility: hidden;
 }
 
-.cartao_conteudo_pergunta p {
+.cartao_conteudo_pergunta {
     color: var(--text-color);
+    font-weight: 500;
+    backface-visibility: hidden;
 }
 
-.cartao_conteudo_resposta p{
+.cartao_conteudo_resposta {
     color: var(--card-back-color);
     font-weight: 700;
-}
-
-.cartao:hover .cartao__conteudo {
-    transform: rotateY(180deg);
-}
-
-.cartao__conteudo__pergunta,
-.cartao__conteudo__resposta {
     backface-visibility: hidden;
+    transform: rotateY(180deg);
     position: absolute;
     height: 100%;
     width: 100%;
 }
-0
-.cartao__conteudo__resposta {
+
+.cartao:hover .cartao_conteudo {
     transform: rotateY(180deg);
+}
+
+.cartao_conteudo p {
+    margin-top: 1rem;
+    padding: 2rem;
+    margin-top: 4rem;
 }
